vagrant/yamlconfig/04/listenerset/00_gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: traefik-custom
spec:
  controllerName: traefik.io/gateway-controller
