vagrant/yamlconfig/04/listenerset/01_nginxgw.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared-gw-tls-listenerset-nginx
  namespace: shared-gw
spec:
  gatewayClassName: nginx
  allowedListeners:
    namespaces:
      from: Selector
      selector:
        matchExpressions:
        - { key: kubernetes.io/metadata.name, operator: In, values: [shared-gw,gundam,demoapp] }
  listeners:
  - name: shared-gw-tls-listenerset-nginx
    protocol: HTTPS
    port: 443
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchExpressions:
          - { key: kubernetes.io/metadata.name, operator: In, values: [gundam,demoapp] }
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        group: ""
        name: gundamapp-tls
        namespace: certificates
