vagrant/yamlconfig/04/listenerset/03_httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gundam-httproute-with-listenerset-envoy
  namespace: gundam
spec:
  parentRefs:
  - name: gundam-listenerset-envoy
    kind: ListenerSet
    group: gateway.networking.k8s.io
  hostnames:
  - listenerset.app.teknews.cloud
  rules:
  - backendRefs:
    - name: titansvc
      port: 8080
      kind: Service
  - backendRefs:
    - name: evasvc
      port: 8090
      kind: Service
    matches:
    - path:
        type: PathPrefix
        value: /eva
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
