vagrant/yamlconfig/04/listenerset/03_httproutenginx.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gundam-httproute-with-listenerset-nginx
  namespace: gundam
spec:
  parentRefs:
  - name: gundam-listenerset-nginx
    kind: ListenerSet
    group: gateway.networking.k8s.io
    namespace: gundam
  #- name : shared-gw-tls-listenerset-nginx
  #  kind: Gateway
  #  group: gateway.networking.k8s.io
  #  namespace: shared-gw
  #hostnames:
  #- cndromania.app.teknews.cloud
  rules:
  - backendRefs:
    - name: gundamappsvc
      port: 8080
      kind: Service
  - backendRefs:
    - name: barbatossvc
      port: 8090
      kind: Service
    matches:
    - path:
        type: PathPrefix
        value: /barbatos
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
